:sparkles: `feat` Renamed to Controller. Added validation DTOs. Added query methods to find database. Refactor exceptions